# BSPatch

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/bsdiff/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/bsdiff/: FileUtil.kt  MainActivity.kt  PatchUtil.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/bsdiff/: ExampleUnitTest.kt
bspatch/: build.gradle
bspatch/src/androidTest/java/com/example/bspatch/: ExampleInstrumentedTest.kt
bspatch/src/main/cpp/: CMakeLists.txt  bspatch.c  bspatch.cpp
bspatch/src/main/java/com/example/bspatch/: NativeLib.kt
bspatch/src/test/java/com/example/bspatch/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
